# 2026-VEDA4-Schedule_Management

./: .gitignore  CMakeLists.txt  README.md  ScheduleInputView.ui  authmanager.cpp  authmanager.h  daycellwidget.cpp  daycellwidget.h  jsonfilemanager.cpp  jsonfilemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  scheduleinputview.cpp  scheduleinputview.h  scheduleitem.cpp  scheduleitem.h  scheduleitem.ui  schedules.json  schedulesave.cpp  schedulesave.h  schedulesearchresultitem.cpp  schedulesearchresultitem.h  schedulesearchview.cpp  schedulesearchview.h  sidebarcontentmanager.cpp  sidebarcontentmanager.h  sidebaropenclose.cpp  sidebaropenclose.h  startwindow.cpp  startwindow.h  startwindow.ui
resources/: style.qss
resources/user_data/: schedules.json
